<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.example.greg.finalproject.StartActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header" />

    <Button
        android:id="@+id/greg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gregButton" />

    <Button
        android:id="@+id/harleen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/harleenButton" />

    <Button
        android:id="@+id/tran"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tranButton" />


    <Button
        android:id="@+id/jason"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jasonButton" />

</LinearLayout>
